THRIFT-4365: Replaced indirect object syntax